dark mode toggle placement fix

--- a/src/assets/sass/root.scss
+++ b/src/assets/sass/root.scss
@@ -281,7 +281,7 @@
     #dark-mode-toggle {
         z-index: 1000;
         position: absolute;
-        top: calc(10 / 16 * 1rem);
+        top: 2.5px;
         right: calc(70 / 16 * 1rem);
         display: block;
         border: none;
@@ -333,6 +333,98 @@
         right: auto;
         transform: none;
         margin: 0;
+
+        &:hover {
+            cursor: pointer;
+        }
+    }
+}
+
+/*-- -------------------------- -->
+<---      Dark Mode Toggle      -->
+<--- -------------------------- -*/
+/* Mobile - 360px */
+@media only screen and (min-width: 0rem) {
+    body.dark-mode {
+        #dark-mode-toggle {
+            .cs-sun {
+                opacity: 1;
+                transform: translate(-50%, -50%);
+            }
+
+            .cs-moon {
+                opacity: 0;
+                transform: translate(-50%, -150%);
+            }
+        }
+    }
+
+    #dark-mode-toggle {
+        z-index: 1000;
+        position: absolute;
+        top: 22px;
+        right: calc(70 / 16 * 1rem);
+        display: block;
+        border: none;
+        background: transparent;
+        height: calc(48 / 16 * 1rem);
+        width: calc(48 / 16 * 1rem);
+        overflow: hidden;
+        padding: 0;
+
+        img,
+        svg {
+            width: calc(20 / 16 * 1rem);
+            height: calc(20 / 16 * 1rem);
+            //center image inside button
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            pointer-events: none;
+        }
+
+        .cs-moon {
+            z-index: 2;
+            // Transition properties
+            transition:
+                transform 0.3s,
+                opacity 0.3s;
+            fill: #1a1a1a;
+        }
+
+        .cs-sun {
+            opacity: 0;
+            z-index: 1;
+            // Transition property
+            transform: translate(-50%, 100%);
+            transition:
+                transform 0.3s,
+                opacity 0.3s;
+        }
+    }
+}
+
+/* Tablet - 768px */
+@media only screen and (min-width: 48rem) {
+    #dark-mode-toggle {
+        margin-left: calc(16 / 16 * 1rem);
+        order: 3;
+        position: relative;
+        right: auto;
+        bottom: auto;
+        top: 2.5px;
+    }
+}
+
+/* Desktop - 1024px */
+@media only screen and (min-width: 64rem) {
+    #dark-mode-toggle {
+        margin: 0;
+        position: relative;
+        right: auto;
+        bottom: auto;
+        transform: none;
 
         &:hover {
             cursor: pointer;
@@ -488,7 +580,7 @@
             width: 100%;
             /* prevents padding from affecting height and width */
             box-sizing: border-box;
-            padding: calc(20 / 16 * 1rem) calc(16 / 16 * 1rem);
+            padding: 0.5rem 1rem;
             display: flex;
             justify-content: flex-end;
             align-items: center;
@@ -512,8 +604,18 @@
                 height: 100%;
                 /* ensures the image never overflows the container. It stays contained within it's width and height and expands to fill it then stops once it reaches an edge */
                 object-fit: contain;
-                border-radius: var(--borderRounded);
             }
+        }
+
+        .cs-logo-text {
+            font-size: calc(18 / 16 * 1rem);
+            line-height: 1em;
+            font-weight: 700;
+            color: var(--headerColor);
+            display: flex;
+            text-decoration: none;
+            justify-content: start;
+            width: 100%;
         }
 
         .cs-nav {
@@ -753,7 +855,6 @@
                 height: 100%;
                 /* ensures the image never overflows the container. It stays contained within it's width and height and expands to fill it then stops once it reaches an edge */
                 object-fit: contain;
-                border-radius: var(--borderRounded);
             }
         }
     }
@@ -1201,8 +1302,15 @@
                 height: 100%;
                 /* ensures the image never overflows the container. It stays contained within it's width and height and expands to fill it then stops once it reaches an edge */
                 object-fit: contain;
-                border-radius: var(--borderRounded);
             }
+        }
+
+        .cs-logo-text {
+            font-size: calc(32 / 16 * 1rem);
+            line-height: 1em;
+            font-weight: 700;
+            color: var(--headerColor);
+            text-decoration: none;
         }
 
         .cs-ul {
@@ -1280,12 +1388,6 @@
 
             .cs-top-link {
                 opacity: 0.8;
-            }
-
-            .cs-logo,
-            .cs-link-icon {
-                /* turns it white */
-                // filter: grayscale(1) brightness(1000%);
             }
         }
     }
